edits to spelling and image extensions

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -257,17 +257,17 @@
                 <h3>What is a hackathon?</h3>
                 <em><h3>A hackathon is an event where teams get together and build a project relating to coding, using software or hardware components, in a short period of time.</h3></em>
                 <br>
-                <h3>What types of projects are allowed at HackTrin VII?</h3>
+                <h3>What types of projects are allowed at HackTrin?</h3>
                 <em><h3>Anything you want, as long as it involves some coding component and relates to the theme.  Popular projects in the past have included websites, apps, games, gagdets, or whatever else you come up with!</h3></em>
                 <br/>
-              <h3>Is there a theme at HackTrin VII?</h3>
-              <em><h3>We're announcing the theme for HackTrin VII on the website two weeks before, as well as notifying all participants by email.</h3></em>
+              <h3>Is there a theme at HackTrin?</h3>
+              <em><h3>We're announcing the theme for HackTrin on the website two weeks before, as well as notifying all participants by email.</h3></em>
               <br>
-              <h3>Who can come to HackTrin VII?</h3>
-              <em><h3>HackTrin VII is open to any current high school or middle school student.</h3></em>
+              <h3>Who can come to HackTrin?</h3>
+              <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
               <br>
-              <h3>How will HackTrin VII run during COVID?</h3>
-              <em><h3>HackTrin VII will run this year on Discord! All individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
+              <h3>How will HackTrin run during COVID?</h3>
+              <em><h3>HackTrin will run this year on Discord! All individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
             </div>
           </aside>
         </section>
@@ -318,7 +318,7 @@
 
 
             <div class="col-4 text-center mb-5">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Sam_Davidson.jpg" alt="">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Sam_Davidson.JPG" alt="">
               <h3>Sam Davidson '21
                 <br>
                 <small>Co-President</small>
@@ -351,7 +351,7 @@
              </div>
 
              <div class="col-lg-2 col-sm-6 text-center mb-4">
-                  <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Ramsay_Bader.jpg" alt="">
+                  <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Ramsay_Bader.JPG" alt="">
                   <h3><small>Ramsay Bader '21</small>
                     <br>
                     <small>Co-Head of Web Design</small>
@@ -378,7 +378,7 @@
                   <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/sanya.jpg" alt="">
                   <h3><small>Sanya Arora '21</small>
                     <br>
-                    <small>Head of Workships</small>
+                    <small>Head of Workshops</small>
                   </h3>
                 </div>
               </div>
@@ -419,13 +419,13 @@
             </div>
              <div class="col-lg-2 col-sm-6 text-center mb-4">
                <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
-              <h3><small>Lake Gifford '22</small>
+              <h3><small>Lake Gifford '23</small>
                 <br>
                 <small>Mentors and Judges Outreach</small>
               </h3>
             </div>
           </div>
-s
+
             </div>
             <!-- /.container -->
           </section>
