--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
-  <title>HackTrin VII</title>
+  <title>HackTrin VIII Virtual</title>
 
 
   <!-- Bootstrap Core CSS -->
