--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
-  <title>HackTrin VIII Virtual</title>
+  <title>HackTrin VIII</title>
 
 
   <!-- Bootstrap Core CSS -->
@@ -77,7 +77,7 @@
         <br>
 
         <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
-        <h1>HackTrin VIII</h1>
+        <h1>HackTrin VIII Virtual</h1>
         <h2>3/7/21</h2>
         <h3>Trinity School's annual hackathon</h3>
         <h3>Come spend March 7th coding with us!</h3>
