image sizing changes

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -334,23 +334,30 @@
         <div class="flexBox" style="
         display: flex;
         flex-flow: row wrap;
+        margin: auto;
         justify-content: center;">
 
         <div class="col-4 text-center mb-5">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Sam_Davidson.JPG" alt="">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/sam.jpg" alt="">
           <h3>Sam Davidson '21
             <br>
             <small>Co-President</small>
           </h3>
         </div>
-
         <div class="col-4 text-center mb-5">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Frances_Cohen.jpg" alt="">
+          <h3>
+            <br>
+            <small></small>
+          </h3>
+        </div>
+        <div class="col-4 text-center mb-5">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/frances.jpg" alt="">
           <h3>Frances Cohen '21
             <br>
             <small>Co-President</small>
           </h3>
         </div>
+
       </div>
     </div>
 
@@ -369,7 +376,7 @@
       </div>
 
       <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/Ramsay_Bader.JPG" alt="">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/ramsay.jpg" alt="">
         <h3><small>Ramsay Bader '21</small>
           <br>
           <small>Co-Head of Web Design</small>
@@ -377,7 +384,7 @@
       </div>
 
       <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/cassie_elish.jpg" alt="">
+        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/cassie.jpg" alt="">
         <h3> <small>Cassie Elish '21</small>
           <br>
           <small>Head of Outreach</small>
@@ -399,6 +406,7 @@
           <small>Head of Workshops</small>
         </h3>
       </div>
+
     </div>
 
   </div>
@@ -411,7 +419,7 @@
     justify-content: center;">
 
     <div class="col-lg-2 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/maia.jpeg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/maia.jpg" alt="">
       <h3><small>Maia Posternack '22</small>
         <br>
         <small> Advertising and Social Media</small>
@@ -419,7 +427,7 @@
     </div>
 
     <div class="col-lg-2 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth_ting.jpg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
       <h3><small>Elizabeth Ting '22</small>
         <br>
         <small>Workshops</small>
