added more discord info

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -262,6 +262,9 @@
               <br>
               <h3>How will HackTrin run during COVID?</h3>
               <em><h3>HackTrin will run this year on Discord! All individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
+              <br>
+              <h3>What is Discord?</h3>
+              <em><h3>Discord is the platform HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started">here</a>.</h3></em>
             </div>
           </aside>
         </section>
