added question to FAQ

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -260,6 +260,9 @@
               <h3>Who can come to HackTrin?</h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
               <br>
+              <h3>What if my school wants to bring more than 3 teams to HackTrin?</h3>
+              <em><h3>If you would like to bring more than 3 teams please let us know by filling out the question form and we will get back to you.</h3></em>
+              <br>
               <h3>How will HackTrin run during COVID?</h3>
               <em><h3>HackTrin will run this year on Discord! All individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
               <br>
