added two local events

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -267,7 +267,7 @@
               <em><h3>HackTrin will run this year on Discord! All individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
               <br>
               <h3>What is Discord?</h3>
-              <em><h3>Discord is the platform HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started">here</a>.</h3></em>
+              <em><h3>Discord is the platform HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started/">here</a>.</h3></em>
             </div>
           </aside>
         </section>
@@ -485,6 +485,9 @@
           <h4><a href="http://studentdisrupt.org/"><img width = '41%' src = 'img/studentDisrupt.png'></a></h4>
           <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = '40%' src = 'img/bit_by_bit.png'></a></h4>
           <h4><a href="https://www.spencehacks.com/"><img width = '30%' src = 'img/spence.png'></a></h4>
+          <h4><a href="https://www.cs.cornell.edu/events/cornell-high-school-programming-contest/"><img width = '30%' src = 'img/cornell.png'></a></h4>
+          <h4><a href="https://www.stuyhacks.org/"><img width = '30%' src = 'img/stuy.png'></a></h4>
+
 
         </div>
         <!-- /.row -->
