--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
-  <title>HackTrin VIII</title>
+  <title>HackTrin IX</title>
 
 
   <!-- Bootstrap Core CSS -->
@@ -232,7 +232,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1>About HackTrin</h1>
-        <h3>HackTrin VIII is the eighth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts March 7th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts March 7th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
           *Schools have a limit of bringing three teams. <h3>
           </div>
@@ -264,10 +264,10 @@
               <em><h3>If you would like to bring more than 3 teams please let us know by filling out the question form and we will get back to you.</h3></em>
               <br>
               <h3>How will HackTrin run during COVID?</h3>
-              <em><h3>HackTrin will run this year on Discord! All individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
+              <em><h3>HackTrin will run this year in person and on Discord! All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event. Everyone else can code together at Trinity school! </h3></em>
               <br>
               <h3>What is Discord?</h3>
-              <em><h3>Discord is the platform HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started/">here</a>.</h3></em>
+              <em><h3>Discord is the platform virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started/">here</a>.</h3></em>
             </div>
           </aside>
         </section>
