Updating index.html for IX

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+ 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -30,7 +31,7 @@
 
 <body>
   <button type="button" id="sign-up" class="btn btn-light  btn-lg hide-on-firefox">
-    <a target="_blank" class="d" href="https://forms.gle/9RNwHXvUNNyzM13Z6">Sign Up!</a>
+    <a target="_blank" class="d" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link">Sign Up!</a>
   </button>
 
 
@@ -85,12 +86,12 @@
       <br>
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
-      <h1>HackTrin VIII Virtual</h1>
-      <h2>3/7/21</h2>
+      <h1>HackTrin IX</h1>
+      <h2>2/27/22</h2>
       <h3>Trinity School's annual hackathon</h3>
-      <h3>Come spend March 7th coding with us!</h3>
+      <h3>Come spend February 27th coding with us!</h3>
 
-      <a target="_blank" href="https://forms.gle/9RNwHXvUNNyzM13Z6" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
+      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
     </div>
 
@@ -232,9 +233,9 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1>About HackTrin</h1>
-        <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts March 7th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
-          *Schools have a limit of bringing three teams. <h3>
+
           </div>
           <!-- /.row -->
         </div>
@@ -260,14 +261,11 @@
               <h3>Who can come to HackTrin?</h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
               <br>
-              <h3>What if my school wants to bring more than 3 teams to HackTrin?</h3>
-              <em><h3>If you would like to bring more than 3 teams please let us know by filling out the question form and we will get back to you.</h3></em>
-              <br>
               <h3>How will HackTrin run during COVID?</h3>
-              <em><h3>HackTrin will run this year in person and on Discord! All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event. Everyone else can code together at Trinity school! </h3></em>
+              <em><h3>HackTrin will run this year with a hybrid model. Fully vaccinated participants are encouraged to come in person at Trinity school! We will also be offering a virtual option on Discord. All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
               <br>
               <h3>What is Discord?</h3>
-              <em><h3>Discord is the platform virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started/">here</a>.</h3></em>
+              <em><h3>Discord is the platform that virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started/">here</a>.</h3></em>
             </div>
           </aside>
         </section>
@@ -374,42 +372,26 @@
       justify-content: center;">
 
       <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/rohan.jpg" alt="">
-        <h3><small>Rohan Mehta '21</small>
+        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lux.jpg" alt="">
+        <h3><small>Lux Hogan-Murphy '22</small>
           <br>
-          <small> Co-Head of Web Design </small>
+          <small> Co-President </small>
         </h3>
       </div>
 
       <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/ramsay.jpg" alt="">
-        <h3><small>Ramsay Bader '21</small>
+        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
+        <h3><small>Elizabeth Ting '22</small>
           <br>
-          <small>Co-Head of Web Design</small>
+          <small>Co-President</small>
         </h3>
       </div>
 
       <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/cassie.jpg" alt="">
-        <h3> <small>Cassie Elish '21</small>
+        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
+        <h3> <small>Lake Gifford '23</small>
           <br>
-          <small>Head of Outreach</small>
-        </h3>
-      </div>
-
-      <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/peter.jpg" alt="">
-        <h3><small>Peter Madoff'21</small>
-          <br>
-          <small>Head of Advertising and Social Media</small>
-        </h3>
-      </div>
-
-      <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/sanya.jpg" alt="">
-        <h3><small>Sanya Arora '21</small>
-          <br>
-          <small>Head of Workshops</small>
+          <small>Co-President</small>
         </h3>
       </div>
 
@@ -417,7 +399,7 @@
 
   </div>
 
-
+<!--
   <div class="row">
     <div class="flexBox" style="
     display: flex;
@@ -458,6 +440,7 @@
   </div>
 
 </div>
+-->
 <!-- /.container -->
 </section>
 
@@ -523,7 +506,7 @@
 
               </ul>
               <hr class="small">
-              <p class="text-muted">© HackTrin 2020</p>
+              <p class="text-muted">© HackTrin 2022</p>
             </div>
           </div>
         </div>
@@ -545,3 +528,4 @@
     </body>
 
     </html>
+
