Editing the team photos

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -342,8 +342,8 @@
         justify-content: center;">
 
         <div class="col-4 text-center mb-5">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/sam.jpg" alt="">
-          <h3>Sam Davidson '21
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lux.jpg" alt="">
+          <h3>Lux Hogan-Murphy '22
             <br>
             <small>Co-President</small>
           </h3>
@@ -355,16 +355,30 @@
           </h3>
         </div>
         <div class="col-4 text-center mb-5">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/frances.jpg" alt="">
-          <h3>Frances Cohen '21
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
+          <h3>Elizabeth Ting '22
             <br>
             <small>Co-President</small>
           </h3>
         </div>
+         <div class="col-4 text-center mb-5">
+          <h3>
+            <br>
+            <small></small>
+          </h3>
+        </div>
+        <div class="col-4 text-center mb-5">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
+          <h3>Lake Gifford '23
+            <br>
+            <small>Co-President</small>
+          </h3>
+        </div>
+        
 
       </div>
     </div>
-
+<!--
     <div class="row">
       <div class="flexBox" style="
       display: flex;
@@ -399,7 +413,7 @@
 
   </div>
 
-<!--
+
   <div class="row">
     <div class="flexBox" style="
     display: flex;
