updated local events/favicon/team visuals

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
- 
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -265,7 +265,7 @@
               <em><h3>HackTrin will run this year with a hybrid model. Fully vaccinated participants are encouraged to come in person at Trinity school! We will also be offering a virtual option on Discord. All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
               <br>
               <h3>What is Discord?</h3>
-              <em><h3>Discord is the platform that virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a style="color:white" href="https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started/">here</a>.</h3></em>
+              <em><h3>Discord is the platform that virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a <u style="color:white" href="https://discord.com/register">here</a></u>.</h3></em>
             </div>
           </aside>
         </section>
@@ -331,50 +331,39 @@
   <section id="team" class="team">
     <div class="container">
       <div class="col-lg-12">
-        <center><h1 class="my-4">Trinity Team</h1></center>
+        <center><h1 class="my-4">HackTrin IX Team</h1></center>
       </div>
 
-      <div class="row">
-        <div class="flexBox" style="
+      <div class="flexBox" style="
         display: flex;
-        flex-flow: row wrap;
-        margin: auto;
-        justify-content: center;">
+        ">
 
-        <div class="col-4 text-center mb-5">
+        <div class="col-5 text-center mb-5">
           <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lux.jpg" alt="">
           <h3>Lux Hogan-Murphy '22
             <br>
             <small>Co-President</small>
           </h3>
         </div>
-        <div class="col-4 text-center mb-5">
-          <h3>
-            <br>
-            <small></small>
-          </h3>
-        </div>
-        <div class="col-4 text-center mb-5">
+
+        <div class="col-5 text-center mb-5">
           <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
           <h3>Elizabeth Ting '22
             <br>
             <small>Co-President</small>
           </h3>
         </div>
-         <div class="col-4 text-center mb-5">
-          <h3>
-            <br>
-            <small></small>
-          </h3>
-        </div>
-        <div class="col-4 text-center mb-5">
+
+        <div class="col-5 text-center ml-12">
           <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
           <h3>Lake Gifford '23
             <br>
             <small>Co-President</small>
           </h3>
         </div>
-        
+
+      </div>
+
 
       </div>
     </div>
@@ -481,8 +470,7 @@
         <h3>Here are some other great events in the NYC area:<h3>
           <h4><a href="http://studentdisrupt.org/"><img width = '41%' src = 'img/studentDisrupt.png'></a></h4>
           <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = '40%' src = 'img/bit_by_bit.png'></a></h4>
-          <h4><a href="https://www.spencehacks.com/"><img width = '30%' src = 'img/spence.png'></a></h4>
-          <h4><a href="https://www.cs.cornell.edu/events/cornell-high-school-programming-contest/"><img width = '30%' src = 'img/cornell.png'></a></h4>
+          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = '30%' src = 'img/cornell.png'></a></h4>
           <h4><a href="https://www.stuyhacks.org/"><img width = '30%' src = 'img/stuy.png'></a></h4>
 
 
@@ -542,4 +530,3 @@
     </body>
 
     </html>
-
