--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -327,15 +327,23 @@
       </aside>
     </div>
   </section>
-
-  <section id="team" class="team">
-    <div class="container">
-      <div class="col-lg-12">
+  <div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
+      <div class="col-lg-12" style="
+    padding-left: 0px;
+    padding-right: 0px;
+">
         <center><h1 class="my-4">HackTrin IX Team</h1></center>
       </div>
 
-      <div class="flexBox" style="
+      <div class="row" style="
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-left: 0px;
+    width: 750px;
+">
+        <div class="flexBox" style="
         display: flex;
+        width: 750px;
         ">
 
         <div class="col-5 text-center mb-5">
@@ -361,8 +369,6 @@
             <small>Co-President</small>
           </h3>
         </div>
-
-      </div>
 
 
       </div>
@@ -445,7 +451,7 @@
 </div>
 -->
 <!-- /.container -->
-</section>
+</div>
 
 <section id="mentors" class="mentors">
   <aside class="call-to-action bg-primary text-white">
