visual fixes/countdown/minor text revisions

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -35,7 +35,6 @@
   </button>
 
 
-
   <!-- Navigation -->
   <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
     <i class="fa fa-bars"></i>
@@ -87,15 +86,21 @@
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
       <h1>HackTrin IX</h1>
-      <h2>2/27/22</h2>
+      <h2>2/27/2022</h2>
       <h3>Trinity School's annual hackathon</h3>
       <h3>Come spend February 27th coding with us!</h3>
 
       <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
+
+    <div id="c1">
+        <style>
+          #c1 {display:block;width:950px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
+        </style>
+        <div>Countdown to HackTrin IX</div>
+        <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
     </div>
 
-  </div>
 
 
 </header>
@@ -110,7 +115,7 @@
 </section> -->
 
 
-<!-- Services -->
+<!-- Table of Contents -->
 <section id="services" class="services bg-primary text-white  hide-on-firefox">
   <div class="container-fluid">
     <div class="row text-center">
@@ -329,7 +334,7 @@
   </section>
   <div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
       <div class="col-lg-12" style="
-    padding-left: 0px;
+    padding-left: 310px;
     padding-right: 0px;
 ">
         <center><h1 class="my-4">HackTrin IX Team</h1></center>
@@ -337,7 +342,7 @@
 
       <div class="row" style="
     margin-right: 0px;
-    margin-left: 0px;
+    margin-left: 265px;
     padding-left: 0px;
     width: 750px;
 ">
@@ -468,24 +473,49 @@
 
 <section id="hackathons" class="hackathons">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 mx-auto text-center">
-        <br>
-        <h1>Other Local Events</h1>
-        <h3>Here are some other great events in the NYC area:<h3>
-          <h4><a href="http://studentdisrupt.org/"><img width = '41%' src = 'img/studentDisrupt.png'></a></h4>
-          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = '40%' src = 'img/bit_by_bit.png'></a></h4>
-          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = '30%' src = 'img/cornell.png'></a></h4>
-          <h4><a href="https://www.stuyhacks.org/"><img width = '30%' src = 'img/stuy.png'></a></h4>
-
-
-        </div>
-        <!-- /.row -->
+<div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
+    <div class="col-lg-12" style="
+  padding-left: 310px;
+  padding-right: 0px;
+">
+      <div>
+        <center><h1 class="my-4">Other Local Events</h1></center>
       </div>
-      <!-- /.container -->
-    </section>
+      <div style="height:50px;">
+          <center><h3>Here are some other great events in the NYC area:<h3></center>
+    </div>
 
+    <div class="row" style="
+  margin-right: 0px;
+  margin-left: 0px;
+  padding-left: 0px;
+  width: 750px;
+">
+      <div class="flexBox" style="
+      display: flex;
+      width: 750px;
+      height: 125px;
+      ">
+      <div class="col-7 text-center mT-5">
+          <h4><a href="http://studentdisrupt.org/"><img width = 410px src = 'img/studentDisrupt.png'></a></h4>
+      </div>
+      <div class="col-5 text-center mT-5">
+          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = 400px src = 'img/bit_by_bit.png'></a></h4>
+      </div>
+        </div>
+      <div class="flexBox" style="
+      display: flex;
+      width: 750px;
+      ">
+      <div class="col-7 text-center mb-5">
+    <h4><a href="https://www.stuyhacks.org/"><img width = 400px src = 'img/stuy.png'></a></h4>
+      </div>
+      <div class="col-7 text-center mb-5">
+          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = 275px height = 275px src = 'img/cornell.png'></a></h4>
+      </div>
+    </div>
+  </div>
+    </section>
 
 
     <!-- Footer -->
@@ -503,18 +533,19 @@
                 <i class="fa fa-phone fa-fw"></i>
                 (123) 456-7890</li> -->
 
-              </ul>
-              <br>
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a href="https://www.instagram.com/trinitycompsci/">
-                    <i class="fa fa-instagram fa-fw fa-3x"></i>
-                  </a>
-                </li>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <a href="https://www.instagram.com/trinitycompsci/">
+                        <i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i>
+                      </a>
+                      </li>
+
+
 
               </ul>
               <hr class="small">
-              <p class="text-muted">© HackTrin 2022</p>
+              <p class="text-muted">© 2022 HackTrin / Trinity Episcopal School Corp.</p>
+              <p class="text-muted">All rights reserved</p>
             </div>
           </div>
         </div>
@@ -534,5 +565,4 @@
       <script src="js/stylish-portfolio.js"></script>
 
     </body>
-
     </html>
