image sizing fixes and favicon

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -6,7 +6,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="HackTrin IX is the ninth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level, can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
@@ -267,6 +267,7 @@
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
               <br>
               <h3>How will HackTrin run during COVID?</h3>
+              </style>decoration:
               <em><h3>HackTrin will run this year with a hybrid model. Fully vaccinated participants are encouraged to come in person at Trinity school! We will also be offering a virtual option on Discord. All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
               <br>
               <h3>What is Discord?</h3>
@@ -352,7 +353,7 @@
         ">
 
         <div class="col-5 text-center mb-5">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lux.jpg" alt="">
+          <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/lux.jpg" alt="">
           <h3>Lux Hogan-Murphy '22
             <br>
             <small>Co-President</small>
@@ -360,7 +361,7 @@
         </div>
 
         <div class="col-5 text-center mb-5">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
+          <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/elizabeth.jpg" alt="">
           <h3>Elizabeth Ting '22
             <br>
             <small>Co-President</small>
@@ -368,7 +369,7 @@
         </div>
 
         <div class="col-5 text-center ml-12">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
+          <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.jpg" alt="">
           <h3>Lake Gifford '23
             <br>
             <small>Co-President</small>
@@ -545,7 +546,7 @@
               </ul>
               <hr class="small">
               <p class="text-muted">© 2022 HackTrin / Trinity Episcopal School Corp.</p>
-              <p class="text-muted">All rights reserved</p>
+              <p style="margin-top:-15px"class="text-muted">All rights reserved</p>
             </div>
           </div>
         </div>
