--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -5,13 +5,15 @@
 
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="HackTrin IX is the ninth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level, can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="HackTrin IX is the ninth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
+  can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
+  to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building).
+   Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
   <title>HackTrin IX</title>
-
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -92,7 +94,7 @@
 
       <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
-
+<div id="content-desktop">
     <div id="c1">
         <style>
           #c1 {display:block;width:950px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
@@ -100,8 +102,17 @@
         <div>Countdown to HackTrin IX</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
     </div>
+</div>
 
-
+<div id="content-mobile">
+    <div id="c2">
+        <style>
+          #c2 {display:block;width:400px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
+        </style>
+        <div>Countdown to HackTrin IX</div>
+<script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
+    </div>
+</div>
 
 </header>
 
@@ -115,7 +126,7 @@
 </section> -->
 
 
-<!-- Table of Contents -->
+<div id="content-desktop">
 <section id="services" class="services bg-primary text-white  hide-on-firefox">
   <div class="container-fluid">
     <div class="row text-center">
@@ -224,6 +235,7 @@
 </div>
 <!-- /.container -->
 </section>
+</div>
 
 <!-- Callout -->
 <!-- <aside class="callout">
@@ -237,7 +249,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
-        <h1>About HackTrin</h1>
+        <h1><strong>About HackTrin</strong></h1>
         <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
@@ -252,25 +264,24 @@
       <section id="faq" class="faq">
         <aside class="call-to-action bg-primary text-white">
           <div class="container text-center">
-            <h1>FAQ</h2>
+            <h1><strong>FAQ</strong></h2>
               <br>
-              <h3>What is a hackathon?</h3>
+              <h3><strong>What is a hackathon?</strong></h3>
               <em><h3>A hackathon is an event where teams get together and build a project relating to coding, using software or hardware components, in a short period of time.</h3></em>
               <br>
-              <h3>What types of projects are allowed at HackTrin?</h3>
+              <h3><strong>What types of projects are allowed at HackTrin?</strong></h3>
               <em><h3>Anything you want, as long as it involves some coding component and relates to the theme.  Popular projects in the past have included websites, apps, games, gagdets, or whatever else you come up with!</h3></em>
               <br/>
-              <h3>Is there a theme at HackTrin?</h3>
+              <h3><strong>Is there a theme at HackTrin?</strong></h3>
               <em><h3>We're announcing the theme for HackTrin on the website two weeks before, as well as notifying all participants by email.</h3></em>
               <br>
-              <h3>Who can come to HackTrin?</h3>
+              <h3><strong>Who can come to HackTrin?</strong></h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
               <br>
-              <h3>How will HackTrin run during COVID?</h3>
-              </style>decoration:
+              <h3><strong>How will HackTrin run during COVID?</strong></h3>
               <em><h3>HackTrin will run this year with a hybrid model. Fully vaccinated participants are encouraged to come in person at Trinity school! We will also be offering a virtual option on Discord. All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
               <br>
-              <h3>What is Discord?</h3>
+              <h3><strong>What is Discord?</strong></h3>
               <em><h3>Discord is the platform that virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a <u style="color:white" href="https://discord.com/register">here</a></u>.</h3></em>
             </div>
           </aside>
@@ -281,7 +292,7 @@
 
         <section id="awards" class="awards">
           <div class="container text-center">
-            <h1>Awards</h1>
+            <h1><strong>Awards</strong></h1>
             <br>
             <h3><b>Best Middle School </b> <em> -- The middle school project that stands out overall</em></h3>
             <br>
@@ -324,21 +335,22 @@
     <aside class="call-to-action bg-primary text-white">
 
       <div class="container text-center">
-        <h1>Contact Us</h1>
+        <h1><strong>Contact Us</strong></h1>
         <h3>Have questions, comments or concerns? Just want to get more emails? If so, just fill out this form below!</h3>
         <button type="button" class="btn btn-light">
-          <a target="_blank" class="" href="https://forms.gle/p3k1fUnAYFs2rMwM9">Contact Us</a>
+          <a target="_blank" href="https://forms.gle/p3k1fUnAYFs2rMwM9"><strong>Contact Us</strong></a>
         </button>
 
       </aside>
     </div>
   </section>
+  <div id="content-desktop">
   <div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
       <div class="col-lg-12" style="
     padding-left: 310px;
     padding-right: 0px;
 ">
-        <center><h1 class="my-4">HackTrin IX Team</h1></center>
+        <center><h1 class="my-4"> <strong>HackTrin IX Team</strong></h1></center>
       </div>
 
       <div class="row" style="
@@ -379,6 +391,45 @@
 
       </div>
     </div>
+</div>
+</div>
+
+<div id="content-mobile">
+<div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
+    <div class="col-lg-12" style="
+  padding-left: 0px;
+  padding-right: 0px;
+">
+      <center><h1 class="my-4"><strong>HackTrin IX Team</strong></h1></center>
+    </div>
+
+<center>
+      <div class="col-9 text-center mb-5">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/lux.jpg" alt="">
+        <h3>Lux Hogan-Murphy '22
+          <br>
+          <small>Co-President</small>
+        </h3>
+      </div>
+
+      <div class="col-8 text-center mb-5">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/elizabeth.jpg" alt="">
+        <h3>Elizabeth Ting '22
+          <br>
+          <small>Co-President</small>
+        </h3>
+      </div>
+
+      <div class="col-8 text-center mb-5">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.jpg" alt="">
+        <h3>Lake Gifford '23
+          <br>
+          <small>Co-President</small>
+        </h3>
+      </div>
+</center>
+  </div>
+</div>
 <!--
     <div class="row">
       <div class="flexBox" style="
@@ -462,7 +513,7 @@
 <section id="mentors" class="mentors">
   <aside class="call-to-action bg-primary text-white">
     <div class="container text-center">
-      <h1>Mentors</h1>
+      <h1><strong>Mentors</strong></h1>
       <h3>Do you have experience with coding or engineering and want to help students with their projects?  If so, sign up to be a mentor!</h3>
       <button type="button" class="btn btn-light">
         <a target="_blank" class="" href="https://forms.gle/8vH8oeBavmK67e9o8">Sign Up Here For Mentors</a>
@@ -471,7 +522,7 @@
   </aside>
 </section>
 
-
+<div id="content-desktop">
 <section id="hackathons" class="hackathons">
 
 <div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
@@ -480,7 +531,7 @@
   padding-right: 0px;
 ">
       <div>
-        <center><h1 class="my-4">Other Local Events</h1></center>
+        <center><h1 class="my-4"><strong>Other Local Events</strong></h1></center>
       </div>
       <div style="height:50px;">
           <center><h3>Here are some other great events in the NYC area:<h3></center>
@@ -517,8 +568,39 @@
     </div>
   </div>
     </section>
+</div>
 
 
+<div id="content-mobile">
+<section id="hackathons" class="hackathons">
+
+<div class="container" style="margin-right: 0px;margin-left: 0px;padding-right:0 px;padding-left: 0px;">
+    <div class="col-lg-12" style="
+  padding-left: 5px;
+  padding-right: 5px;
+">
+      <div>
+        <center><h1 class="my-4"><strong>Other Local Events</strong></h1></center>
+      </div>
+      <div style="height:85px;">
+          <center><h3>Here are some other great events in the NYC area:<h3></center>
+    </div>
+
+      <div class="col-7 text-center mt-5">
+          <h4><a href="http://studentdisrupt.org/"><img width = 360px mb=40px src = 'img/studentDisrupt.png'></a></h4>
+      </div>
+      <div class="col-5 text-center mt-5">
+          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = 360px mb=40px src = 'img/bit_by_bit.png'></a></h4>
+      </div>
+      <div class="col-7 text-center mt-5">
+    <h4><a href="https://www.stuyhacks.org/"><img width = 360px src = 'img/stuy.png'></a></h4>
+      </div>
+      <div class="col-7 text-center mb-5 mt-5">
+          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = 360px height = 360px src = 'img/cornell.png'></a></h4>
+      </div>
+    </div>
+    </section>
+</div>
     <!-- Footer -->
     <footer>
       <div class="container">
