padding adjustment for mobile

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -80,7 +80,11 @@
 </nav>
 
 <!-- Header -->
-<header class="header" id="top">
+<header class="header" id="top" style="
+    margin-left: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+">
   <div class="text-vertical-center">
 
     <div class="head-text">
