--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -59,7 +59,7 @@
         <a class="js-scroll-trigger" href="#register">Register</a>
       </li>
       <li>
-        <a class="js-scroll-trigger" href="#w">HackTrin?</a>
+        <a class="js-scroll-trigger" href="#w">Details</a>
       </li>
       <li>
         <a class="js-scroll-trigger" href="#faq">FAQ</a>
@@ -284,7 +284,7 @@
       <section id="w" class="w">
         <div class="container text-center">
           <br>
-          <h1><strong>HackTrin?</strong></h2>
+          <h1><strong>Details</strong></h2>
           <br>
           <h3><strong>WHO:</strong></h3>
           <h3>You and a team of up to 3 other people.</h3>
